--- a/package.json
+++ b/package.json
@@ -25,17 +25,26 @@
     "dep-graph": "nx dep-graph",
     "help": "nx help"
   },
+  "husky": {
+    "hooks": {
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
+      "pre-commit": "pretty-quick --staged"
+    }
+  },
   "private": true,
   "dependencies": {
     "tslib": "^2.0.0"
   },
   "devDependencies": {
+    "@commitlint/cli": "^12.1.1",
+    "@commitlint/config-conventional": "^12.1.1",
     "@nrwl/cli": "12.0.8",
     "@nrwl/nx-cloud": "latest",
     "@nrwl/tao": "12.0.8",
     "@nrwl/workspace": "12.0.8",
     "@types/node": "14.14.33",
     "dotenv": "8.2.0",
+    "husky": "^6.0.0",
     "prettier": "2.2.1",
     "ts-node": "~9.1.1",
     "typescript": "~4.1.4"
