--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "build": "nx build",
     "test": "nx test",
     "lint": "nx workspace-lint && nx lint",
-
     "e2e": "nx e2e",
     "affected:apps": "nx affected:apps",
     "affected:libs": "nx affected:libs",
@@ -28,9 +27,9 @@
   },
   "lint-staged": {
     "*.{js,json,css,scss,md,ts,html,graphql}": [
-      "yarn format --uncommitted"
+      "npm run format --uncommitted"
     ]
-  },  
+  },
   "husky": {
     "hooks": {
       "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
@@ -52,9 +51,15 @@
     "@nrwl/tao": "12.0.8",
     "@nrwl/workspace": "12.0.8",
     "@types/node": "14.14.33",
+    "@typescript-eslint/eslint-plugin": "^4.22.0",
     "dotenv": "8.2.0",
+    "eslint": "^7.25.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-angular": "^4.0.1",
+    "eslint-plugin-prettier": "^3.4.0",
     "husky": "^6.0.0",
-    "prettier": "2.2.1",
+    "prettier": "^2.2.1",
+    "prettier-eslint": "^12.0.0",
     "ts-node": "~9.1.1",
     "typescript": "~4.1.4"
   }
