--- a/package.json
+++ b/package.json
@@ -38,28 +38,43 @@
   },
   "private": true,
   "dependencies": {
+    "@nestjs/common": "^7.0.0",
+    "@nestjs/core": "^7.0.0",
+    "@nestjs/platform-express": "^7.0.0",
+    "reflect-metadata": "^0.1.13",
+    "rxjs": "~6.6.3",
     "tslib": "^2.0.0"
   },
   "devDependencies": {
     "@angular-devkit/architect": "^0.1102.11",
     "@commitlint/cli": "^12.1.1",
     "@commitlint/config-conventional": "^12.1.1",
+    "@nestjs/schematics": "^7.0.0",
+    "@nestjs/testing": "^7.0.0",
     "@nrwl/angular": "^12.0.8",
     "@nrwl/cli": "12.0.8",
+    "@nrwl/eslint-plugin-nx": "12.0.8",
+    "@nrwl/jest": "12.0.8",
+    "@nrwl/linter": "12.0.8",
     "@nrwl/nest": "^12.0.8",
+    "@nrwl/node": "12.0.8",
     "@nrwl/nx-cloud": "latest",
     "@nrwl/tao": "12.0.8",
     "@nrwl/workspace": "12.0.8",
+    "@types/jest": "26.0.8",
     "@types/node": "14.14.33",
     "@typescript-eslint/eslint-plugin": "^4.22.0",
+    "@typescript-eslint/parser": "4.19.0",
     "dotenv": "8.2.0",
     "eslint": "^7.25.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-angular": "^4.0.1",
     "eslint-plugin-prettier": "^3.4.0",
     "husky": "^6.0.0",
+    "jest": "26.2.2",
     "prettier": "^2.2.1",
     "prettier-eslint": "^12.0.0",
+    "ts-jest": "26.4.0",
     "ts-node": "~9.1.1",
     "typescript": "~4.1.4"
   }
