feat(start): API nest aded)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,11 +3,11 @@
   "editor.insertSpaces": true,
   "editor.renderWhitespace": "all",
   "editor.tabCompletion": "on",
-  // "editor.fontFamily": " Operator Mono, Firacode, 'Fira Code', Fira Code, Consolas, 'Courier New', monospace",
-  // "editor.fontFamily": "Operator Mono",
-  // "editor.fontFamily": "'Droid Sans Mono', 'monospace', monospace, 'Droid Sans Fallback'",
+  // "editor.fontFamily": "Dank Mono, Operator Mono, Firacode, 'Fira Code', Fira Code, Consolas, 'Courier New', monospace",
+  // "editor.fontFamily": "Dank Mono, Operator Mono",
+  // "editor.fontFamily": "Dank Mono, 'Droid Sans Mono', 'monospace', monospace, 'Droid Sans Fallback'",
   // "editor.fontLigatures": true,
-  "editor.fontFamily": "Dank Mono",
+  "editor.fontFamily": "Hack, Hack Regular",
   "editor.fontLigatures": true,
   "editor.fontWeight": "300",
   "bracketPairColorizer.forceIterationColorCycle": true,
@@ -31,7 +31,7 @@
   // "editor.wordWrap": "wordWrapColumn",
   "terminal.integrated.fontSize": 10,
   "files.insertFinalNewline": true,
-  "window.zoomLevel": 2,
+  "window.zoomLevel": 0,
   "editor.renderLineHighlight": "all",
   "editor.renderIndentGuides": true,
   "workbench.editor.showIcons": true,
