--- a/nx.json
+++ b/nx.json
@@ -1,6 +1,14 @@
 {
-  "implicitDependencies": { "package.json": { "dependencies": "*", "devDependencies": "*" }, ".eslintrc.json": "*" },
-  "affected": { "defaultBase": "master" },
+  "implicitDependencies": {
+    "package.json": {
+      "dependencies": "*",
+      "devDependencies": "*"
+    },
+    ".eslintrc.json": "*"
+  },
+  "affected": {
+    "defaultBase": "master"
+  },
   "npmScope": "simples-empresa",
   "tasksRunnerOptions": {
     "default": {
@@ -13,5 +21,9 @@
       }
     }
   },
-  "projects": { "roma-api": { "tags": [] } }
+  "projects": {
+    "roma-api": {
+      "tags": []
+    }
+  }
 }
