--- a/package.json
+++ b/package.json
@@ -51,16 +51,16 @@
     "@commitlint/config-conventional": "^12.1.1",
     "@nestjs/schematics": "^7.0.0",
     "@nestjs/testing": "^7.0.0",
-    "@nrwl/angular": "^12.0.8",
-    "@nrwl/cli": "12.0.8",
-    "@nrwl/eslint-plugin-nx": "12.0.8",
-    "@nrwl/jest": "12.0.8",
-    "@nrwl/linter": "12.0.8",
-    "@nrwl/nest": "^12.0.8",
-    "@nrwl/node": "12.0.8",
-    "@nrwl/nx-cloud": "latest",
-    "@nrwl/tao": "12.0.8",
-    "@nrwl/workspace": "12.0.8",
+    "@nrwl/angular": "12.3.4",
+    "@nrwl/cli": "12.3.4",
+    "@nrwl/eslint-plugin-nx": "12.3.4",
+    "@nrwl/jest": "12.3.4",
+    "@nrwl/linter": "12.3.4",
+    "@nrwl/nest": "12.3.4",
+    "@nrwl/node": "12.3.4",
+    "@nrwl/nx-cloud": "12.1.1",
+    "@nrwl/tao": "12.3.4",
+    "@nrwl/workspace": "12.3.4",
     "@types/jest": "26.0.8",
     "@types/node": "14.14.33",
     "@typescript-eslint/eslint-plugin": "^4.22.0",
@@ -74,8 +74,8 @@
     "jest": "26.2.2",
     "prettier": "^2.2.1",
     "prettier-eslint": "^12.0.0",
-    "ts-jest": "26.4.0",
+    "ts-jest": "26.5.5",
     "ts-node": "~9.1.1",
-    "typescript": "~4.1.4"
+    "typescript": "4.2.4"
   }
 }
