--- a/nx.json
+++ b/nx.json
@@ -29,7 +29,8 @@
       "tags": ["scope:shared", "type:assets"]
     },
     "roma-app": {
-      "tags": []
+      "tags": [],
+      "implicitDependencies": ["shared-assets", "shared-styles"]
     },
     "roma-app-e2e": {
       "tags": [],
