--- a/package.json
+++ b/package.json
@@ -52,9 +52,12 @@
     "@nestjs/core": "^7.6.17",
     "@nestjs/platform-express": "^7.0.0",
     "@nestjs/typeorm": "^7.1.5",
+    "dotenv-flow": "^3.2.0",
+    "mysql": "^2.18.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~6.6.3",
     "tslib": "^2.0.0",
+    "typeorm": "^0.2.34",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
