--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
   },
   "devDependencies": {
     "@angular-devkit/architect": "^0.1102.11",
-    "@angular-devkit/build-angular": "12.0.0",
+    "@angular-devkit/build-angular": "^0.1102.14",
     "@angular-eslint/eslint-plugin": "~12.0.0",
     "@angular-eslint/eslint-plugin-template": "~12.0.0",
     "@angular-eslint/template-parser": "~12.0.0",
@@ -72,17 +72,17 @@
     "@commitlint/config-conventional": "^12.1.1",
     "@nestjs/schematics": "^7.0.0",
     "@nestjs/testing": "^7.0.0",
-    "@nrwl/angular": "12.3.4",
-    "@nrwl/cli": "12.3.4",
-    "@nrwl/cypress": "12.3.4",
-    "@nrwl/eslint-plugin-nx": "12.3.4",
-    "@nrwl/jest": "12.3.4",
-    "@nrwl/linter": "12.3.4",
-    "@nrwl/nest": "12.3.4",
-    "@nrwl/node": "12.3.4",
-    "@nrwl/nx-cloud": "12.1.1",
-    "@nrwl/tao": "12.3.4",
-    "@nrwl/workspace": "12.3.4",
+    "@nrwl/angular": "12.3.6",
+    "@nrwl/cli": "12.3.6",
+    "@nrwl/cypress": "12.3.6",
+    "@nrwl/eslint-plugin-nx": "12.3.6",
+    "@nrwl/jest": "12.3.6",
+    "@nrwl/linter": "12.3.6",
+    "@nrwl/nest": "12.3.6",
+    "@nrwl/node": "12.3.6",
+    "@nrwl/nx-cloud": "12.1.8",
+    "@nrwl/tao": "12.3.6",
+    "@nrwl/workspace": "12.3.6",
     "@types/jest": "26.0.8",
     "@types/node": "14.14.33",
     "@typescript-eslint/eslint-plugin": "^4.22.0",
