feat(database): DB connection is OK - core lib

--- a/nx.json
+++ b/nx.json
@@ -41,6 +41,9 @@
     },
     "shared-environments": {
       "tags": ["scope:shared", "type:environments"]
+    },
+    "api-core": {
+      "tags": ["scope:api", "type:core"]
     }
   }
 }
