--- a/package.json
+++ b/package.json
@@ -51,9 +51,14 @@
     "@nestjs/common": "^7.6.17",
     "@nestjs/config": "^0.6.3",
     "@nestjs/core": "^7.6.17",
+    "@nestjs/graphql": "^7.11.0",
     "@nestjs/platform-express": "^7.0.0",
     "@nestjs/typeorm": "^7.1.5",
+    "apollo-server-express": "^2.25.2",
     "dotenv-flow": "^3.2.0",
+    "graphql": "^15.5.1",
+    "graphql-tools": "^4.0.8",
+    "joi": "^17.4.0",
     "mysql": "^2.18.1",
     "nestjs-easyconfig": "^2.3.6",
     "reflect-metadata": "^0.1.13",
