feat(database): working on GraphQL

--- a/package.json
+++ b/package.json
@@ -58,12 +58,14 @@
     "dotenv-flow": "^3.2.0",
     "graphql": "^15.5.1",
     "graphql-tools": "^4.0.8",
+    "graphql-type-json": "^0.3.2",
     "joi": "^17.4.0",
     "mysql": "^2.18.1",
     "nestjs-easyconfig": "^2.3.6",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~6.6.3",
     "tslib": "^2.0.0",
+    "type-graphql": "^1.1.1",
     "typeorm": "^0.2.34",
     "zone.js": "~0.11.4"
   },
