feat: routes graphql working

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,11 +4,10 @@
   "editor.insertSpaces": true,
   "editor.renderWhitespace": "all",
   "editor.tabCompletion": "on",
-  // "editor.fontFamily": "Dank Mono, Operator Mono, Firacode, 'Fira Code', Fira Code, Consolas, 'Courier New', monospace",
+  // "editor.fontFamily": "Hack, Hack Regular",
+  "editor.fontFamily": "Dank Mono, Operator Mono, Firacode, 'Fira Code', Fira Code, Consolas, 'Courier New', monospace",
   // "editor.fontFamily": "Dank Mono, Operator Mono",
   // "editor.fontFamily": "Dank Mono, 'Droid Sans Mono', 'monospace', monospace, 'Droid Sans Fallback'",
-  // "editor.fontLigatures": true,
-  "editor.fontFamily": "Hack, Hack Regular",
   "editor.fontLigatures": true,
   "editor.fontWeight": "300",
   "bracketPairColorizer.forceIterationColorCycle": true,
@@ -33,7 +32,7 @@
   // "editor.wordWrap": "wordWrapColumn",
   "terminal.integrated.fontSize": 10,
   "files.insertFinalNewline": true,
-  "window.zoomLevel": 0,
+  "window.zoomLevel": 2,
   "editor.renderLineHighlight": "all",
   "editor.renderIndentGuides": true,
   "workbench.editor.showIcons": true,
