--- a/package.json
+++ b/package.json
@@ -40,14 +40,14 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "12.0.0",
-    "@angular/common": "12.0.0",
-    "@angular/compiler": "12.0.0",
-    "@angular/core": "12.0.0",
-    "@angular/forms": "12.0.0",
-    "@angular/platform-browser": "12.0.0",
-    "@angular/platform-browser-dynamic": "12.0.0",
-    "@angular/router": "12.0.0",
+    "@angular/animations": "12.1.3",
+    "@angular/common": "12.1.3",
+    "@angular/compiler": "12.1.3",
+    "@angular/core": "12.1.3",
+    "@angular/forms": "12.1.3",
+    "@angular/platform-browser": "12.1.3",
+    "@angular/platform-browser-dynamic": "12.1.3",
+    "@angular/router": "12.1.3",
     "@nestjs/common": "^7.6.17",
     "@nestjs/config": "^0.6.3",
     "@nestjs/core": "^7.6.17",
@@ -67,35 +67,35 @@
     "tslib": "^2.0.0",
     "type-graphql": "^1.1.1",
     "typeorm": "^0.2.34",
-    "zone.js": "~0.11.4"
+    "zone.js": "0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/architect": "^0.1102.11",
-    "@angular-devkit/build-angular": "^0.1102.14",
-    "@angular-eslint/eslint-plugin": "~12.0.0",
-    "@angular-eslint/eslint-plugin-template": "~12.0.0",
-    "@angular-eslint/template-parser": "~12.0.0",
-    "@angular/compiler-cli": "12.0.0",
-    "@angular/language-service": "12.0.0",
+    "@angular-devkit/build-angular": "12.1.3",
+    "@angular-eslint/eslint-plugin": "12.3.1",
+    "@angular-eslint/eslint-plugin-template": "12.3.1",
+    "@angular-eslint/template-parser": "12.3.1",
+    "@angular/compiler-cli": "12.1.3",
+    "@angular/language-service": "12.1.3",
     "@commitlint/cli": "^12.1.1",
     "@commitlint/config-conventional": "^12.1.1",
     "@nestjs/schematics": "^7.0.0",
     "@nestjs/testing": "^7.0.0",
-    "@nrwl/angular": "12.3.6",
-    "@nrwl/cli": "12.3.6",
-    "@nrwl/cypress": "12.3.6",
-    "@nrwl/eslint-plugin-nx": "12.3.6",
-    "@nrwl/jest": "12.3.6",
-    "@nrwl/linter": "12.3.6",
-    "@nrwl/nest": "12.3.6",
-    "@nrwl/node": "12.3.6",
-    "@nrwl/nx-cloud": "12.1.8",
-    "@nrwl/tao": "12.3.6",
-    "@nrwl/workspace": "12.4.0",
+    "@nrwl/angular": "12.6.2",
+    "@nrwl/cli": "12.6.2",
+    "@nrwl/cypress": "12.6.2",
+    "@nrwl/eslint-plugin-nx": "12.6.2",
+    "@nrwl/jest": "12.6.2",
+    "@nrwl/linter": "12.6.2",
+    "@nrwl/nest": "12.6.2",
+    "@nrwl/node": "12.6.2",
+    "@nrwl/nx-cloud": "12.3.0",
+    "@nrwl/tao": "12.6.2",
+    "@nrwl/workspace": "12.6.2",
     "@types/jest": "26.0.8",
     "@types/node": "14.14.33",
-    "@typescript-eslint/eslint-plugin": "^4.22.0",
-    "@typescript-eslint/parser": "4.19.0",
+    "@typescript-eslint/eslint-plugin": "4.28.4",
+    "@typescript-eslint/parser": "4.28.4",
     "cypress": "^6.0.1",
     "dotenv": "8.2.0",
     "eslint": "^7.25.0",
@@ -104,12 +104,12 @@
     "eslint-plugin-cypress": "^2.10.3",
     "eslint-plugin-prettier": "^3.4.0",
     "husky": "^6.0.0",
-    "jest": "26.2.2",
-    "jest-preset-angular": "8.4.0",
-    "prettier": "^2.2.1",
+    "jest": "27.0.3",
+    "jest-preset-angular": "9.0.3",
+    "prettier": "2.3.2",
     "prettier-eslint": "^12.0.0",
-    "ts-jest": "26.5.5",
+    "ts-jest": "27.0.3",
     "ts-node": "~9.1.1",
-    "typescript": "4.2.4"
+    "typescript": "4.3.5"
   }
 }
