--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -22,11 +22,11 @@
     "baseUrl": ".",
     "paths": {
       "@envs": ["libs/shared/environments/src/index.ts"],
-      "@simples-empresa/shared/assets": ["libs/shared/assets/src/index.ts"],
-      "@simples-empresa/shared/styles": ["libs/shared/styles/src/index.ts"],
-      "@simples-empresa/shared/environments": ["libs/shared/environments/src/index.ts"],
       "@simples-empresa/api/core": ["libs/api/core/src/index.ts"],
       "@simples-empresa/api/shared": ["libs/api/shared/src/index.ts"],
+      "@simples-empresa/shared/assets": ["libs/shared/assets/src/index.ts"],
+      "@simples-empresa/shared/environments": ["libs/shared/environments/src/index.ts"],
+      "@simples-empresa/shared/styles": ["libs/shared/styles/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp", "**/*.spec.ts"],
